--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cv-project-manager",
   "version": "0.0.6",
   "private": false,
-  "scripts": {    
+  "scripts": {
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "build": "vue-cli-service electron:build",
@@ -15,6 +15,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "electron-updater": "^4.0.6",
+    "mysql": "^2.18.1",    
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
