--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "build": "vue-cli-service electron:build",
     "serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps",    
+    "postuninstall": "electron-builder install-app-deps",
     "gh-publish": "vue-cli-service electron:build -p always"
   },
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
     "electron-updater": "^4.0.6",
-    "mysql": "^2.18.1",    
+    "mysql": "^2.18.1",
     "vue": "^2.6.11",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
