--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "electron-updater": "^4.0.6",
     "mysql": "^2.18.1",
+    "node-fetch": "^2.6.1",
     "vue": "^2.6.11",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.2.0",
