--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "electron-updater": "^4.0.6",
+    "material-design-icons": "^3.0.1",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
     "vue": "^2.6.11",
