--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,5 @@ pnpm-debug.log*
 
 #Electron-builder output
 /dist_electron
-src/config.js.bak
-src/db/mysqlconfig.js.bak
+src/config.js
+src/db/mysqlconfig.js
